--- a/default.css
+++ b/default.css
@@ -244,7 +244,7 @@
 		width: 60px;
 		height: 60px;
 		line-height: 60px;
-		background: #2E3893;
+		background: #2E8B57;
 		border-radius: 30px;
 		text-align: center;
 	}
@@ -259,7 +259,7 @@
 		display: inline-block;
 		margin-top: 2em;
 		padding: 0.6em 1em;
-		background: #2E3893;
+		background: #2E8B57;
 		border-radius: 4px;
 		line-height: 1.8em;
 		text-decoration: none;
@@ -296,8 +296,7 @@
 	
 	.title h2
 	{
-		font-size: 2.8em;
-		color: #261300;
+		font-size: 2em;
 	}
 	
 	.title .byline
@@ -340,7 +339,11 @@
 	
 	#logo h1 a
 	{
-		color: #2E3893;
+		color: #2E8B57;
+	}
+	#logo h2 a
+	{
+		color: #2E8B57;
 	}
 
 	#logo a
@@ -366,7 +369,7 @@
 		display: inline-block;
 		margin-bottom: 2em;
 		padding: 1em;
-		background: #2E3893;
+		background: #2E8B57;
 		border-radius: 50%;
 		font-size: 1.6em;
 		color: #FFF;
@@ -436,8 +439,8 @@
 	#menu .item_wallet a
 	{
 		color: #FFF;
-		background: #2E3893;
-		border: 1px solid #2E3893;
+		background: #2E8B57;
+		border: 1px solid #2E8B57;
 		border-radius: 4px;
 	}
 	
@@ -463,7 +466,7 @@
 	{
 		overflow: hidden;
 		padding: 0em 0em 8em 0em;
-		background: #2E3893;
+		background: #2E8B57;
 	}
 
 	#wrapper3
@@ -492,6 +495,12 @@
 		min-width: 75%;
 	}
 	
+	#welcome .box
+	{
+		text-align: center;
+		color: rgba(255,255,255,0.7);
+	}
+
 	#welcome .content
 	{
 		padding: 0em 8em;
@@ -508,6 +517,25 @@
 		color: rgba(255,255,255,0.6);
 	}
 
+	#welcome .inner
+	{
+		flex-wrap: wrap;
+		justify-content: center;
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+	}
+
+	#welcome .column1,
+	#welcome .column2,
+	#welcome .column3,
+	#welcome .column4
+	{
+		min-width: 256px;
+		margin-top: 2em;
+	}
 
 /*********************************************************************************/
 /* Exchange                                                                      */
